# leafy-energy-markets

./: .drone.yml  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  HOWTO.md  README.md  docker-compose.yml  renovate.json  setup-drone-secrets.sh  setup-kanopy-secrets.sh  start-backend.sh  start-demo.sh  start-frontend.sh
.github/agents/: qa.agent.md
backend/: .dockerignore  Dockerfile  promptfooconfig.yaml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: advisor.py  audit.py  commands.py  esl.py  evals.py  queries.py  search.py  telemetry.py  trading.py
backend/app/domain/: aggregates.py  commands.py  events.py
backend/app/infrastructure/: db.py  embeddings.py  event_store.py  search.py  seed_documents.py  seed_iea.py
backend/app/projections/: tariff_scenarios.py
backend/esl/: __init__.py  compiler.py  manifests.py  metrics.py  models.py  seed.py
backend/esl/manifests/entities/: bess.yaml  bidding_zone.yaml  pvsystem.yaml  windfarm.yaml
backend/esl/manifests/metrics/: capacity_factor.yaml  renewable_penetration.yaml  soc.yaml
backend/promptfoo/: advisor_provider.py  assertions.py  audit_provider.py
backend/ragas_evals/: runner.py
backend/tests/unit/: test_aggregates.py
deploy/: docker-compose.yml  env.example
docs/scenarios/: 01-imbalance-settlement-audit.md  02-remit-trade-surveillance.md  (+2 more)
environment/: production-backend.yaml  production-frontend.yaml  production.yaml  staging-backend.yaml  staging-frontend.yaml  staging.yaml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
(+79 files in other folders)
